--- a/_data/articles.yml
+++ b/_data/articles.yml
@@ -1,11 +1,17 @@
 categories:
   - name: Music
     articles:
-      - 2019-wombats-riverstage
       - 2019-big-pineapple
-      - 2018-rolling-blackouts
+      - 2018-wombats-riverstage
       - 2018-big-pineapple
-
+      - 2018-rolling-blackouts
+      - 2018-mama-kin-spender
+      - 2018-oh-mercy
+      - 2018-vera-blue
+      - 2018-hot-brown-honey
+      - 2018-mark-lee
+      - 2018-good-charlotte
+    
   - name: Travel
     articles:
       - 2020-travel-hk
