--- a/_data/articles.yml
+++ b/_data/articles.yml
@@ -17,4 +17,6 @@ categories:
       - 2018-hot-brown-honey
       - 2018-mark-lee
       - 2018-good-charlotte
+      - 2018-set-mo
+      - 2018-the-bottlers
     
