--- a/_data/articles.yml
+++ b/_data/articles.yml
@@ -1,12 +1,13 @@
 categories:
   - name: Travel
     articles:
+      - 2020-uber-rewards
       - 2020-travel-europe
       - 2020-travel-hk
       - 2018-third-culture-kid
 
 
-  - name: Music
+  - name: Entertainment
     articles:
       - 2019-big-pineapple
       - 2018-wombats-riverstage
