Update articles that have link rot.

--- a/_data/articles.yml
+++ b/_data/articles.yml
@@ -27,6 +27,7 @@ categories:
   - name: Sustainability
     articles:
       - 2021-environmental-resolutions
+      - 2020-connecting-data
       - 2020-green-routine
       - 2020-activewear-chemicals
       - 2020-minimise-waste
